# bio-explainer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  start_windows.bat  start_windows.ps1
server/: __init__.py  cache.py  config.py  generator.py  main.py  marker.py  models.py  prompts.py
static/: app.js  index.html  style.css
static/species/: 2dc66438e22ec3e2.json  3f015b7f7dbbd272.json  ad1642b5a5b699ea.json  f6f7a6c8f183939e.json
tests/: test_api.py  test_cache.py  test_models.py  test_page_library.py
